add: director page

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 SECRET_KEY="salom"
 
-MONGO_DEV_URL=mongodb+srv://abbos:zPS4yWZIsges947f@cluster0.adosdaq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-MONGO_PROD_URL=mongodb+srv://abbos:zPS4yWZIsges947f@cluster0.adosdaq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0 
-MONGO_TEST_URL=mongodb+srv://abbos:zPS4yWZIsges947f@cluster0.adosdaq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+# MONGO_DEV_URL=mongodb+srv://abbos:zPS4yWZIsges947f@cluster0.adosdaq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+# MONGO_PROD_URL=mongodb+srv://abbos:zPS4yWZIsges947f@cluster0.adosdaq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0 
+MONGO_TEST_URL=mongodb+srv://nurmuhammadikromov58:Nurmuhammad1612@chat.g0qtc0r.mongodb.net/?retryWrites=true&w=majority&appName=Chat
 
+    
