--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "chai": "^5.1.2",
     "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "csv-writer": "^1.6.0",
+    "dotenv": "^16.6.1",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mammoth": "^1.8.0",
